fix overlay link for uploads

--- a/app/templates/projects/overlay.haml
+++ b/app/templates/projects/overlay.haml
@@ -17,7 +17,7 @@
       %a.pages{ :href => "/projects/{{permalink}}/pages" }
         = t('shared.navigation.pages')
     %p
-      %a.files{ :href => "/projects/{{permalink}}/files" }
+      %a.files{ :href => "/projects/{{permalink}}/uploads" }
         = t('shared.navigation.files')
     %p
       %a.people{ :href => "/projects/{{permalink}}/people" }
