--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -25,6 +25,7 @@
 @import sidebar
 @import watch_list
 @import overlays
+@import notifications
 
 @import calendar_date_select
 @import autocomplete
