--- a/app/views/shared/_global_navigation.haml
+++ b/app/views/shared/_global_navigation.haml
@@ -2,6 +2,7 @@
   %ol.global_navigation
     /= micro_avatar(current_user)
     %li= link_to current_user.login, current_user
+    %li= link_to t('.notifications', :count => current_user.unread_notifications_count > 0 ? "(#{current_user.unread_notifications_count})" : ""), notifications_path
     %li= link_to t('.settings'), account_settings_path
     - if current_user.invitations.pending_projects.count > 0
       %li= link_to_unless_current t('.project_invitations', :count => current_user.invitations.count),
