--- a/app/views/projects/invite_people.haml
+++ b/app/views/projects/invite_people.haml
@@ -8,11 +8,10 @@
   = f.text_area :invite_emails, :placeholder => "john@galt.com, francisco@danconia.com"
   = render "invitations/select_language"
 
-  - contacts = @current_project.organization.users_in_projects - [current_user]
-  - if contacts.any?
+  - if @contacts.any?
     %h3=t '.invite_from_this_organization', :organization => @current_project.organization
     .users
-      - for user in contacts[0,60]
+      - for user in @contacts[0,60]
         %label.user
           = check_box_tag 'project[invite_users][]', user.id
           = user.name
