--- a/app/views/emailer/_comment.html.haml
+++ b/app/views/emailer/_comment.html.haml
@@ -1,26 +1,26 @@
 - if Array(unread).include? comment
-  - unread = 'background: rgb(255,255,225)'
+  - unread = 'background: rgb(255,255,225);'
 - else
   - unread = ''
 
 .comment{ :style => email_text(:normal) + 'border-bottom: 1px #555 dotted' }
-  .body{ :style => unread }
+  .body{ :style => unread+" padding: 5px; font-size: 12px" }
     %p{ :style => 'font-size: 12px' }
       %strong{ :style => 'color: rgb(50,50,50);' }
         = h(comment.user.name) + ', '
       %span{ :style => 'color: rgb(150,150,150);' }
         = I18n.l(comment.created_at.in_time_zone(@recipient.time_zone), :format => "%b %d &mdash; %I:%M %p").html_safe
       - if comment.task_comment?
-        %span{ :style => 'margin-left: 10px; color: rgb(150,150,150);' }
+        %span{ :style => 'margin-left: 10px; font-weight: bold; color: rgb(50,50,50);' }
           = comment_task_status(comment)
       - if comment.task_comment? and comment.assigned_transition?
-        %span{ :style => 'margin-left: 10px; color: rgb(150,150,150);' }
+        %span{ :style => 'margin-left: 10px; font-weight: bold; color: white; background-color: #333; padding: 1px 3px;' }
           - if comment.assigned_id?
             = t('tasks.assigned.assigned_to', :user => comment.assigned.user.name)
           - else
             = t('tasks.assigned.unassigned')
 
-      ~raw comment.body_html
+    ~raw comment.body_html
 
     - if comment.uploads.any?
       %ul
