--- a/app/views/emailer/_comment.text.erb
+++ b/app/views/emailer/_comment.text.erb
@@ -1,8 +1,8 @@
 -------------------------------------------------
-<%= h(comment.user.name) + ', ' %> <%= I18n.l(comment.created_at.in_time_zone(@recipient.time_zone), :format => "%b %d - %I:%M %p") %>: <%= localized_status_name(comment) if comment.task_comment? %>
-<% if comment.task_comment? and comment.assigned_transition? -%>
-<% if comment.assigned_id? -%>
-<%= t('tasks.assigned.assigned_to', :user => comment.assigned.user.name) %>
+<%= comment.user.name + ', ' %> <%= I18n.l(comment.created_at.in_time_zone(@recipient.time_zone), :format => "%b %d - %I:%M %p") %>: <%= localized_status_name(comment) if comment.task_comment? %>
+<% if comment.task_comment? and comment.assigned_transition? %>
+<% if comment.assigned_id? %>
+<%= t('tasks.assigned.assigned_to', :user => comment.assigned.user.name) %> 
 <% else %>
 <%= t('tasks.assigned.unassigned') %>
 <% end %>
