Buttons: Pointer cursor and no select for text

--- a/app/styles/_buttons.sass
+++ b/app/styles/_buttons.sass
@@ -20,6 +20,8 @@ a.button, a.unarchive_task_list_link, a.reorder_task_list_link, a.add_button, a.
   +rounded(4px)
   +gradient-bottom(silver)
   text-shadow: white 1px 1px 1px
+  cursor: pointer
+  -webkit-user-select: none
   &:hover
     text-decoration: none
     +gradient-bottom(#aaaaaa)
