Make sure that relationship exists on comment.assigned, just in case nullify fail on delete.

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -25,7 +25,7 @@
 
         - if comment.task_comment? and comment.assigned_transition?
           %p.assigned_transition
-            - if comment.assigned_id?
+            - if comment.assigned and comment.assigned.user
               = t('tasks.assigned.assigned_to', :user => comment.assigned.user.name)
             - else
               = t('tasks.assigned.unassigned')
