Improved OAuth settings pages

--- a/app/styles/_oauth.sass
+++ b/app/styles/_oauth.sass
@@ -50,6 +50,31 @@
         display: block
         margin-bottom: 5px
 
+#client_tokens
+  .client_token
+    +clearing
+    font-size: 12px
+    padding: 5px
+    margin-bottom: 5px
+    .name
+      float: left
+      width: 350px
+      h2
+        margin: 0px
+        font-size: 14px
+    p
+      margin: 0
+      color: rgb(150, 150, 150)
+    .actions
+      float: right
+      text-align: right
+      width: 8.5em
+      padding-top: 5px
+      a
+        +button
+        display: block
+        margin-bottom: 5px
+
 .show_oauth_clients
   .oauth_clients_header
     display: block
