--- a/app/views/oauth_clients/_client.haml
+++ b/app/views/oauth_clients/_client.haml
@@ -1,5 +1,5 @@
 .oauth_client[client]
   .name
-    %h2= link_to client.name, :action => :show, :id => client.id
+    %h2= link_to client.name, oauth_client_path(client.id)
   .actions
-    = link_to 'Edit', edit_oauth_client_path(client)
+    = link_to t('.edit'), edit_oauth_client_path(client)
