--- a/app/views/oauth_clients/_form.haml
+++ b/app/views/oauth_clients/_form.haml
@@ -1,17 +1,17 @@
 =error_messages_for :client_application
 .text_field
-  %label{:for=>"client_application_name"} Name*
+  = f.label :name, t('.name')
   = f.text_field :name
 
 .text_field
-  %label{:for=>"client_application_url"} Main Application URL*
+  = f.label :url, t('.url')
   = f.text_field :url
 
 .text_field
-  %label{:for=>"client_application_callback_url"} Callback URL*
+  = f.label :callback_url, t('.callback_url')
   = f.text_field :callback_url
 
 .text_field
-  %label{:for=>"client_application_support_url"} Support URL
+  = f.label :support_url, t('.support_url')
   = f.text_field :support_url
 
