--- a/app/views/oauth_clients/index.haml
+++ b/app/views/oauth_clients/index.haml
@@ -1,26 +1,12 @@
 - content_for :column do
   = render 'shared/user_navigation'
 
-%h1 OAuth Client Applications
+%h2= t('.title')
 - unless @tokens.empty?
+  %p= t('.authorized_applications')
 
-  %p
-    The following tokens have been issued to applications in your name
-
-  %table
-    %tr
-      %th Application
-      %th Issued
-      %th &nbsp;
-    - @tokens.each do |token|
-      - content_tag_for :tr, token do
-        %td= link_to token.client_application.name, token.client_application.url
-        %td= token.authorized_at
-        %td
-          - form_tag :controller => 'oauth', :action => 'revoke' do
-            = hidden_field_tag 'token', token.token
-            = submit_tag "Revoke!"
+  #client_tokens
+    = render :partial => 'client_token', :collection => @tokens
 
 %p
-  Developers: Register your apps
-  %a{:href => developer_oauth_clients_path}= "Here"
+  = t('.developers_register_html', :url => developer_oauth_clients_path)
