Consolidate oauth-plugin into lib code so we audit code properly

--- a/app/views/oauth/oauth2_authorize.haml
+++ b/app/views/oauth/oauth2_authorize.haml
@@ -9,7 +9,7 @@
 - form_tag authorize_url do
   = hidden_field_tag "response_type", params[:response_type]
   = hidden_field_tag "client_id", params[:client_id]
-  = hidden_field_tag "redirect_url", params[:redirect_url]
+  = hidden_field_tag "redirect_uri", params[:redirect_uri]
   = hidden_field_tag "state", params[:state]
   = hidden_field_tag "scope", params[:scope]
   = check_box_tag 'authorize'
