--- a/app/views/oauth/authorize.haml
+++ b/app/views/oauth/authorize.haml
@@ -2,16 +2,17 @@
 
 %p
   Would you like to authorize
-  = link_to @token.client_application.name,@token.client_application.url
+  = link_to @client_application.name,@client_application.url
   (
-  = link_to @token.client_application.url,@token.client_application.url
+  = link_to @client_application.url,@client_application.url
   ) to access your account?
 - form_tag authorize_url do
-  = hidden_field_tag "oauth_token", @token.token
-  - if params[:oauth_callback]
-    = hidden_field_tag "oauth_callback", params[:oauth_callback]
+  = hidden_field_tag "response_type", params[:response_type]
+  = hidden_field_tag "client_id", params[:client_id]
+  = hidden_field_tag "redirect_uri", params[:redirect_uri]
+  = hidden_field_tag "state", params[:state]
+  = hidden_field_tag "scope", params[:scope]
+  = check_box_tag 'authorize'
+  = t('.authorize_access')
   %p
-    = check_box_tag 'authorize'
-    authorize access
-  %p
-    = submit_tag
+    = submit_tag t('.submit')
