--- a/app/views/oauth_clients/index.haml
+++ b/app/views/oauth_clients/index.haml
@@ -7,6 +7,8 @@
 
   #client_tokens
     = render :partial => 'client_token', :collection => @tokens
+- else
+  %p= t('.no_authorized_applications')
 
 %p
   = t('.developers_register_html', :url => developer_oauth_clients_path)
