--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -36,8 +36,6 @@ h2
     text-transform: uppercase
     margin-bottom: 5px
     margin-left: 0
-  div.column &
-    border-bottom: solid 1px rgb(200, 200, 200)
 
 textarea
   font: 1em $typeface
@@ -102,6 +100,8 @@ textarea.placeholder, input.placeholder
 div.column
   h2
     margin-top: 20px
+    text-transform: none
+    font-weight: bold
     span
       padding: 0
   p
