--- a/app/styles/_header.sass
+++ b/app/styles/_header.sass
@@ -1,19 +1,20 @@
 #header_wrap
   +clearing
-  border:
-    bottom: 1px solid #ddd
   +gradient-bottom(#eee)
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFFFFF, endColorstr=#EEEEEE, GradientType=0)"
-  padding-bottom: 5px
+  padding:
+    left: 15px
+    right: 15px
+    bottom: 5px
 
 div.header
-  width: 960px
+  width: 100%
   margin: 0 auto
-  margin-top: 5px
+  padding-top: 5px
   h1
     margin: 0
     border-right: 1px solid #ddd
-    width: 134px
+    width: $column_width - 35px
     height: 36px
     padding-right: 20px
     float: left
