--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -26,6 +26,7 @@
 @import sidebar
 @import watch_list
 @import overlays
+@import quick_add_pane
 
 @import calendar_date_select
 @import autocomplete
