--- a/app/views/shared/_global_navigation.haml
+++ b/app/views/shared/_global_navigation.haml
@@ -1,6 +1,10 @@
 #user_utilities
   %ol.global_navigation
     /= micro_avatar(current_user)
+    %li.quick_add
+      = link_to "Quick add", "#", :class => 'quick_add_link'
+      .pane{ :style => 'display: none' }
+        = render 'tasks/form', :project => Project.first, :task_list => TaskList.first, :task => TaskList.first.tasks.build
     %li= link_to current_user.login, current_user
     %li= link_to t('.settings'), account_settings_path
     - if current_user.invitations.pending_projects.count > 0
