--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -31,4 +31,5 @@
   = instructions_for_calendars
   = instructions_for_email(@current_project)
   = link_to t('.public_project'), public_project_path(@current_project), :class => :public_link if @current_project.public
+  = join_project_link(@current_project) unless @current_project.has_member?(@current_user)
   = leave_project_link(@current_project) if @current_project.has_member?(@current_user)
