Adding workaround css for chrome 10

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -205,6 +205,10 @@ form .upload_area
         display: inline
         img
           display: block
+      p:nth-child(1)
+        display: inline
+        img
+          display: block
       p
         margin: 8px 0
       overflow: hidden
