Silly Talker "integration"
Loads an iframe in the main pane
Includes a stylesheet to be required from Talker

--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -66,3 +66,4 @@
       .el= link_to t('.show_all_organizations'), organizations_path, :class => 'more ajax'
 
   .el= link_to t('.time'), time_path, :class => 'ajax time'
+  .el= link_to "Chat", "/chat", :class => 'chat'
