--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -3,17 +3,14 @@
   -# Recent Activity
   .el= link_to t('.recent_activity'), root_path, :class => 'recent_activity ajax'
 
+  - pending_tasks = current_user.nearest_pending_tasks
   -# My Tasks
-  .el
-    -#.el#my_tasks
+  .el#my_tasks
     = link_to t('.my_tasks'), task_lists_path(:filter_assigned => 'mine'), :class => 'tasks'
-    -#%span.clickable= link_to pending_tasks.length, task_lists_path(:filter_assigned => 'mine'), :class => 'hoverable', :'data-hoverable-class' => 'left', :id => 'open_my_tasks', :title => t('.open_my_tasks')
-    %span 3
-    -#.contained
-    -#  .el= link_to t('.show_all_tasks'), task_lists_path, :class => 'more'
-    -#  .el= link_to t('.gantt_and_calendars'), gantt_view_task_lists_path, :class => 'more'
+    %span= pending_tasks.size
+  .el= link_to t('.all_tasks'), task_lists_path, :class => ''
 
-  .el= link_to "Calendars", calendars_path, :class => 'calendar ajax'
+  .el= link_to t('.calendars'), calendars_path, :class => 'calendar ajax'
 
   -# All Projects
   - show_only_recent = current_user.people.size > 3
