--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -24,15 +24,6 @@
       font-size: 11px
       +rounded(10px)
       +box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.5))
-      &.clickable
-        padding: 0
-        margin: 0
-        &:hover
-          background-color: #333
-          a
-            color: white
-        a
-          padding: 2px 4px
     &.selected, &.children-selected, &.selected:hover, &.children-selected:hover
       background: lighten($navbar, 20)
       +gradient(#a0b0d0, #6f83ab)
@@ -41,6 +32,9 @@
       a
         color: white
         font-weight: bold
+      span
+        background-color: white
+        color: #8597BB
     &:hover
       background: lighten($navbar, 30)
     &.expanded
