Contextual sidebar, scrollbars, absolute layout, foldable sidebar

--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -7,6 +7,9 @@ $link_hover: #df5249
 $comments_left_border: #f2f2f2
 $comments_bkg: #fafafa
 
+$column_width: 190px 
+$aux_width: 200px
+
 // fix for IE7, http://flipc.blogspot.com/2009/02/damn-ie7-and-inline-block.html
 =inline-block($height)
   display: inline-block
