--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -1,26 +1,22 @@
-$column_width: 190px 
-
 html, body
   margin: 0px
   padding: 0px
   background-color: white
   overflow: hidden
+  font-size: 12px
 
-div.content_wrap, div.column_wrap
-  position: fixed
+body
+  width: 100%
+  height: 100%
+
+div.content_wrap, div.column_wrap, div.aux_wrap
+  position: absolute
   top: 68px
   bottom: 0
   overflow: hidden
 
 #column
   width: $column_width
-div.content_wrap
-  left: $column_width
-  right: 0
-  border-left: 1px solid #B7B7B7
-  overflow-y: auto
-  .content
-    margin: 10px
 div.column_wrap
   font-size: 12px
   left: 0
@@ -32,6 +28,28 @@ div.column_wrap
       max-width: $column_width - 20px
     .view_sidebar
       margin-left: 15px
+div.content_wrap
+  left: $column_width
+  right: $aux_width
+  border-left: 1px solid #B7B7B7
+  .content
+    position: absolute
+    top: 23px
+    bottom: 0
+    left: 0
+    right: 0
+    overflow-y: auto
+    padding: 10px
+div.aux_wrap
+  width: $aux_width
+  right: 0
+  border-left: 1px solid #B7B7B7
+  background: #e6edf5
+  overflow: hidden
+  a
+    color: black
+  .view_sidebar
+    padding: 5px
 
 // TODO: remove extra element and use +clearing
 div.clear
@@ -93,7 +111,8 @@ p.flash-notice
 .separator
   height: 20px
   margin: 0
-  padding: 0 10px
+  padding: 0
+    left: 10px
   line-height: 19px
   background: #E7E7E7
   background-image: -moz-linear-gradient(top,#F3F3F3,#D7D7D7)
@@ -101,6 +120,30 @@ p.flash-notice
   border:
     bottom: 1px solid #B7B7B7
     top: 1px solid #DDD
+  &.with_margin
+    margin-top: 20px
+  span
+    position: absolute
+    right: 0
+    border-left: 1px solid #ddd
+    height: 19px
+    display: inline-block
+    a
+      display: inline-block
+      padding: 0 5px
+    &.left
+      position: relative
+      left: -11px
+      border-right: 1px solid #DDD
+  .column_wrap &
+    +gradient(#D8DEE5, #C6D1DD)
+    border-top: 1px solid #A4ACB3
+    span
+      border-left: 1px solid #a4acb3
+  a:hover
+    color: black
+    text-decoration: none
+.separator, .separator a
   color: #777
   text-shadow: white 0 1px 0
   text-transform: uppercase
@@ -113,8 +156,30 @@ p.flash-notice
   -o-user-select: none
   user-select: none
   -webkit-background-clip: padding-box
-  &.with_margin
-    margin-top: 20px
-  .column_wrap &
-    +gradient(#D8DEE5, #C6D1DD)
-    border-top: 1px solid #A4ACB3
+
+body
+  .unfold_sidebar, .unfold_aux
+    display: none
+  &.folded_aux
+    .aux_wrap
+      display: none
+    .content_wrap
+      right: 0
+    .unfold_aux
+      display: inline-block
+  &.folded_sidebar
+    .column_wrap
+      display: none
+    .content_wrap
+      left: 0
+    .unfold_sidebar
+      display: inline-block
+
+::-webkit-scrollbar
+  width: 9px
+  height: 9px
+::-webkit-scrollbar-thumb:vertical
+  height: 50px
+  background-color: #999
+  -webkit-border-radius: 8px
+  border-radius: 8px
