--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -84,8 +84,16 @@ $micro_size: 24px
       float: none
     .notify
       display: block
-    label.digest
-      text-align: left
+  table.notifications
+    padding-top: 10px
+    th
+      padding: 10px 0
+    td
+      padding: 4px 0
+      border-bottom: solid 1px rgb(230, 230, 230)
+    tr, th
+      width: 24%
+      text-align: center
   #change_password_link
     margin:
       top: 20px
