--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -1,5 +1,6 @@
 = page_column(@current_project,@pages,@page)
 
+= people_watching(@current_project,current_user,@page)
 .page_header
   = page_action_links(@current_project,@page)
   %h2=h @page
