--- a/app/views/watchers/_watcher.haml
+++ b/app/views/watchers/_watcher.haml
@@ -13,4 +13,7 @@
     = link_to watcher.watchable.task_list, project_task_list_path(watcher.watchable.project, watcher.watchable.task_list)
     &rarr;
     = link_to watcher.watchable.name.html_safe, project_task_path(watcher.watchable.project, watcher.watchable)
+  - when Page
+    .icon.page_icon
+    = link_to watcher.watchable.name.html_safe, project_page_path(watcher.watchable.project, watcher.watchable)
   %span.remove= link_to t('.remove'), unwatch_path(watcher), :class => 'remove'
