--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -7,16 +7,15 @@
     .project_select
       = label_tag :project_id, t('comments.new.comment_on_project')
       = select_tag :project_id, options_for_projects_by_organization(commentable_projects)
-    
     = form.hidden_field :simple
-    
     - form.object.comments.build
     - form.fields_for :comments do |fields|
       = render 'comments/fields', :f => fields, :placeholder => t('comments.new.project')
 
 - if current_user.projects.any?
   #activities
-    = list_threads(@threads)
+    -# list_threads(@threads)
+    = javascript_tag "document.on('dom:loaded', function() { TeamboxClient.fetchAndRenderActivities() })"
     = show_more_button
 - else
   = render 'projects/primer'
