Add page watcher option to account settings

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -84,15 +84,33 @@ $micro_size: 24px
       float: none
     .notify
       display: block
+  .watch_new
+    font-weight: bold
+    float: right
+    width: 362px
+    text-align: center
+    +gradient-top(#F0F0F0)
+    border-left: solid 1px rgb(230, 230, 230)
+    border-right: solid 1px rgb(230, 230, 230)
+    padding: 5px 0px
   table.notifications
+    width: 100%
     padding-top: 10px
+    tr.header
+      font-weight: bold
+    th.project, th.watch_new, th.digest
+      font-weight: bold
+    th.checkbox, td.checkbox
+      width: 120px
+      +gradient-top(#F0F0F0)
+      border-left: solid 1px rgb(230, 230, 230)
+      border-right: solid 1px rgb(230, 230, 230)
     th
-      padding: 10px 0
+      padding: 2px 0
     td
       padding: 4px 0
       border-bottom: solid 1px rgb(230, 230, 230)
     tr, th
-      width: 24%
       text-align: center
   #change_password_link
     margin:
