--- a/app/views/pages/_page.haml
+++ b/app/views/pages/_page.haml
@@ -8,5 +8,5 @@
         %h4= h(group[0].rel_object.name)
       %ul
         - group[1].each do |item|
-          - if item.rel_object.class == Note
+          - if item.rel_object.class == Note && item.rel_object.name.present?
             %li= h(item.rel_object.name)
