--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,11 +12,12 @@
     = yield :stylesheet_includes
     = stylesheet_link_tag 'cucumber', :media => :screen if Rails.env.cucumber?
     = trimmer_include_tag
+    = javascript_include_tag 'underscore'
     = sprockets_include_tag
     = yield :js_includes
     = javascript_tag do
       = yield :js_templates
-  %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env} controller_#{controller.controller_name}", :reload_url => reload_url}
+  %body{ :class => "folded_aux #{location_name} #{I18n.locale} #{Rails.env} controller_#{controller.controller_name}", :reload_url => reload_url}
     = load_my_avatar_for_new_comments
     = load_javascript_user_data
     = archived_project_strip(@current_project)
