--- a/app/views/users/email_posts.haml
+++ b/app/views/users/email_posts.haml
@@ -10,15 +10,15 @@
 %div{:style => 'width: 600px'}
   %h1= t('.title')
   %p= t('.send_replies_with_this_email')
-  %p= link_to "#{@project_permalink}+#{@target_type.downcase}+#{@target_id}@#{Rails.configuration[:app_domain]}", "mailto:#{@project_permalink}+#{@target_type.downcase}+#{@target_id}@#{Rails.configuration[:app_domain]}"
+  %p= link_to "#{@project_permalink}+#{@target_type.downcase}+#{@target_id}@#{Teambox.config.smtp_settings[:domain]}", "mailto:#{@project_permalink}+#{@target_type.downcase}+#{@target_id}@#{Teambox.config.smtp_settings[:domain]}"
   %p= t('.teambox_magic_happens')
 
   %p= t('.other_shortcuts_available')
   %table{:style => 'width: 580px'}
     %tr
-      %td= link_to "#{@project_permalink}+conversation@#{Rails.configuration[:app_domain]}", "mailto:#{@project_permalink}+conversation@#{Rails.configuration[:app_domain]}"
+      %td= link_to "#{@project_permalink}+conversation@#{Teambox.config.smtp_settings[:domain]}", "mailto:#{@project_permalink}+conversation@#{Teambox.config.smtp_settings[:domain]}"
       %td= t('.will_create_conversation')
     %tr
-      %td= link_to "#{@project_permalink}+task@#{Rails.configuration[:app_domain]}", "mailto:#{@project_permalink}+task@#{Rails.configuration[:app_domain]}"
+      %td= link_to "#{@project_permalink}+task@#{Teambox.config.smtp_settings[:domain]}", "mailto:#{@project_permalink}+task@#{Teambox.config.smtp_settings[:domain]}"
       %td= t('.will_create_task')
 
