--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -43,7 +43,7 @@
             %span.left.unfold_sidebar= link_to "&rarr;".html_safe, "#"
             All Projects
             %span.unfold_aux= link_to "&larr;".html_safe, "#"
-          .content#content= yield
+          .content#content
         .aux_wrap
           .separator
             Contextual
