--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -4,14 +4,14 @@
 .nav_links
 
   -# Recent Activity
-  .el= link_to t('.recent_activity'), root_path, :class => 'recent_activity ajax'
+  .el= link_to t('.recent_activity'), '#'
 
   - pending_tasks = current_user.nearest_pending_tasks
   -# My Tasks
   .el#my_tasks
-    = link_to t('.my_tasks'), task_lists_path(:filter_assigned => 'mine'), :class => 'tasks'
+    = link_to t('.my_tasks'), '#my_tasks'
     %span= pending_tasks.size
-  .el= link_to t('.all_tasks'), task_lists_path, :class => ''
+  .el= link_to t('.all_tasks'), '#all_tasks'
   .el= link_to t('.calendars'), calendars_path, :class => 'calendar ajax'
 
   -# All Projects
