--- a/app/styles/print.sass
+++ b/app/styles/print.sass
@@ -66,6 +66,8 @@ img.drag
         width: 23px
         padding: 0
         text-align: center
+      .task_drag
+        display: none
     .taskName
       span.assigned_date, span.assigned_user
         display: none
