Authorize dialog is now more friendly. Denials are now sent back to the client.

--- a/app/styles/_oauth.sass
+++ b/app/styles/_oauth.sass
@@ -99,3 +99,11 @@
     padding: 10px
     margin: 10px 0
     overflow-x: auto
+
+#oauth_authorize_form
+  .do_allow
+    margin-top: 8px
+    font-size: 14px
+    font-weight: bold
+  .scope
+    margin-left: 16px
