--- a/app/styles/_buttons.sass
+++ b/app/styles/_buttons.sass
@@ -57,6 +57,12 @@ a.add_button, a.new_task_list_link
       padding: 8px 7px 7px 7px
       background: url(/images/button_wrap_bg.jpg) no-repeat right
 
+a.button.allow
+  .cssgradients &
+    +gradient-bottom(rgb(0,180,20))
+  .no-cssgradients &
+    background: rgb(0,140,40)
+
 =button
   display: inline-block
   +rounded(4px)
